--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reach/router": "^1.3.1",
     "node-fetch": "^2.6.0",
     "prompt": "^1.0.0"
   }
