--- a/mandatory-assignment/q-and-a/server/package.json
+++ b/mandatory-assignment/q-and-a/server/package.json
@@ -4,13 +4,16 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node start.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/runtime": "^7.8.7",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^5.9.4",
     "morgan": "^1.9.1",
     "serverless-http": "^2.3.2"
   },
@@ -18,5 +21,10 @@
   "engines": {
     "node": "10.15.3",
     "npm": "6.9.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/register": "^7.8.6"
   }
 }
