--- a/q-and-a/server/package.json
+++ b/q-and-a/server/package.json
@@ -15,16 +15,15 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.4",
     "morgan": "^1.9.1",
-    "serverless-http": "^2.3.2"
+    "serverless-http": "^2.3.2",
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/register": "^7.8.6"
   },
   "description": "Small template for developing an API using express.js",
   "engines": {
     "node": "10.15.3",
     "npm": "6.9.0"
   },
-  "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/register": "^7.8.6"
-  }
+  "devDependencies": {}
 }
