Updating package.json

--- a/q-and-a/package.json
+++ b/q-and-a/package.json
@@ -8,6 +8,7 @@
     "test": "cd client && npm test",
     "preinstall": "cd server && npm install",
     "install": "cd client && npm install",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm run build",
+    "postinstall": "npm run build"
   }
 }
