--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "cd server && node start.js",
     "dev": "cd client && yarn start",
     "test": "cd client && yarn test",
-    "preinstall": "cd server && yarn install",
+    "preinstall": "npm install yarn && cd server && yarn install",
     "install": "cd client && yarn install",
     "build": "cd client && yarn run build",
     "postinstall": "yarn run build"
